test/sema/call-method-on-array.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var a = [1, 2, 3];
    // CHECK: [[@LINE+1]]:5: error: type 'int[3]' has no member function 'foo'
    a.foo();
}
